appId: xyz.alaniz.aaron.Lightsaber
---
- launchApp
- tapOn: "lightsaber handle"
- waitForAnimationToEnd
- assertVisible: "lightsaber blade"
- tapOn: "lightsaber handle"
- assertNotVisible: "lightsaber blade"
